# sve-template-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sve-template-plugin.mk
source/: DistrhoPluginInfo.h  Makefile  Makefile.mk  README.md  builder(deprecated).sh  builder.sh  generateNewPlugin.py  notes.txt  template-plugin.cpp  template-plugin.hpp  templatePlugin.cpp  templatePlugin.hpp  test.cpp
source/templates/: CMakeLists.txt.template  DistrhoPluginInfo.h.template  README.md.template  plugin.cpp.template  plugin.hpp.template
